--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
     "requirejs": "~2.1.14",
     "angular": "~1.2.23",
     "angular-resource": "~1.2.23",
-    "angular-animate": "~1.2.23"
+    "angular-animate": "~1.2.23",
+    "angular-mocks": "~1.2.23"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.23"
   }
 }
