--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-karma": "^0.8.3",
     "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-story-reporter": "^0.2.2"
