--- a/package.json
+++ b/package.json
@@ -29,5 +29,20 @@
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-story-reporter": "^0.2.2"
+  },
+   "dependencies": {
+    "connect": "^2.25.7",
+    "grunt": "^0.4.0",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-qunit": "~0.3.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-karma": "^0.8.3",
+    "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-story-reporter": "^0.2.2"
   }
 }
