updated karma production dependencies

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-story-reporter": "^0.2.2"
+    "karma-story-reporter": "^0.2.2",
+    "requirejs": "^2.1.10",
+    "karma-requirejs": "^0.2.2"
   }
 }
