--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "browserify": "^5.11.1",
     "browserify-shim": "^3.7.0",
+    "chai": "^1.9.1",
     "connect": "^2.25.7",
     "connect-livereload": "^0.4.0",
     "gulp": "^3.8.8",
