--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "connect-livereload": "^0.4.0",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.0",
-    "gulp-browserify": "^0.5.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.0",
     "gulp-embedlr": "^0.5.2",
@@ -32,6 +31,7 @@
     "gulp-karma": "0.0.4",
     "gulp-less": "^1.3.5",
     "gulp-livereload": "^2.1.1",
+    "gulp-ng-html2js": "^0.1.8",
     "gulp-streamify": "0.0.5",
     "gulp-util": "^3.0.1",
     "karma": "^0.12.0",
