--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "angular": "^1.2.23",
     "angular-mocks": "^1.2.22",
     "angular-resource": "^0.1.1",
+    "jasmine-fixture": "^1.0.8",
     "jquery": "^2.1.1"
   }
 }
